# SmartGuitarAmp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SmartAmp.jucer  aax_builds.sh  mac_builds.sh  validate.sh  win_builds.sh
.github/: FUNDING.yml
.github/workflows/: cmake.yml
installers/linux/: build_deb.sh
installers/mac/: Intro.txt  SmartAmp.pkgproj  SmartPedal.pkgproj  build_mac_installer.sh
installers/windows/: SmartAmp_Install_Script.iss  SmartAmpl_Install_Script.iss  build_win_installer.sh
models/: BluesJr.json  HT40_Overdrive.json  bluej_clean_p0088.json  bluej_fullD_p0153.json
modules/: CMakeLists.txt
modules/cmake/: SubprojectVersion.cmake  WarningFlags.cmake
plugins/SmartAmp/: SmartAmp.jucer
plugins/SmartAmp/Source/: Activations.cpp  Activations.h  Convolution.cpp  Convolution.h  ConvolutionLayer.cpp  ConvolutionLayer.h  ConvolutionStack.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ResonantLowpassFilter.cpp  ResonantLowpassFilter.h  WaveNet.cpp  WaveNet.h  WaveNetLoader.cpp  WaveNetLoader.h
resources/: CMakeLists.txt
src/: CMakeLists.txt  ConvolutionStack.cpp  Eq4Band.cpp  Eq4Band.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RTNeuralLSTM.cpp  RTNeuralLSTM.h  WaveNet.cpp  WaveNet.h  WaveNetLoader.cpp  WaveNetLoader.h  myLookAndFeel.cpp  myLookAndFeel.h
